# snake-ai

./: Cargo.toml  LICENSE  README.md
src/: food.rs  geometry.rs  input.rs  main.rs  snake.rs  state.rs
src/ai/: genetics.rs  mod.rs  nn.rs  senses.rs
