[package]
name = "game"
version = "0.1.0"
authors = ["Henrik"]

[dependencies]
piston = "0.32.0"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.37.0"
piston2d-opengl_graphics = "0.43.0"
time = "*"
rand = "*"
find_folder = "*"

## Already finished NEAT algorithm.
#rustneat = "0.1.5"



## For matrices and points
nalgebra = "*"
## For collision
ncollide = "*"

## Dependencies for RustNN
rustc-serialize = "0.3.12"

## Dependencies for serde_json
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# [dependencies.pistoncore-glutin_window]
# git = "https://github.com/PistonDevelopers/glutin_window"
